# ChoMCP

./: .gitignore  LICENSE  README.md  pyproject.toml
src/chomcp/: __init__.py  __main__.py  server.py
