[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "chonkie-mcp"
version = "0.1.0"
description = "A simple MCP server for simple and efficient chunking via 🦛 Chonkie ✨"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.2.0",
    "chonkie>=0.5.0",
]

[project.urls]
Documentation = "https://github.com/chonkie-ai/chonkie-mcp"
Source = "https://github.com/chonkie-ai/chonkie-mcp"

[project.scripts]
chonkie-mcp = "chonkie_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/chonkie_mcp"]
