[build-system]
requires = [ "setuptools>=65", "wheel" ]
build-backend = "setuptools.build_meta"

[project]
name = "chomcp"
version = "0.1.0"
description = "A simple MCP server for simple and efficient chunking via 🦛 Chonkie ✨"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "typer", 
    "httpx>=0.28.1",
    "mcp[cli]>=1.2.0",
    "chonkie[all]>=0.5.0",
]
keywords = [
    "chunking",
    "mcp",
    "chonkie",
    "ai",
    "natural language processing"
]


[project.urls]
Documentation = "https://github.com/chonkie-ai/chomcp"
Source = "https://github.com/chonkie-ai/chomcp"

[project.scripts]
chomcp = "chomcp:app"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["chomcp"]
